<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="ru.startandroid.develop.preferencefragmentexample.PrefFragment1"
        android:icon="@android:drawable/ic_menu_call"
        android:summary="@string/header1_summary"
        android:title="@string/header1_title"/>
    <header
        android:fragment="ru.startandroid.develop.preferencefragmentexample.PrefFragment2"
        android:icon="@android:drawable/ic_menu_info_details"
        android:summary="@string/header2_summary"
        android:title="@string/header2_title"/>
    <header
        android:icon="@android:drawable/ic_menu_view"
        android:summary="@string/header3_summary"
        android:title="@string/header3_title">
        <intent
            android:action="android.settings.DISPLAY_SETTINGS"/>
    </header>
</preference-headers>